--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,8 @@ description: Personal blogging theme for Stackbit
 layout_style: overflow
 palette: blue
 header:
-  title: Stackbit Fresh
-  tagline: Header Tagline
+  title: John Doe
+  tagline: Traveling
   profile_img: images/avatar.png
   profile_img_alt: Author avatar
   background: dark
@@ -56,11 +56,7 @@ header:
       new_window: true
 footer:
   content: >-
-    &copy; Stackbit. All rights reserved. This Jamstack site was created with <a
-    href="https://www.stackbit.com/?utm_source=deployed-footer" target="_blank"
-    rel="noopener">Stackbit</a>. Create yours <a
-    href="https://app.stackbit.com/create?theme=fresh&utm_source=deployed-footer"
-    target="_blank" rel="noopener">now</a>
+    &copy; Stackbit. All rights reserved.
 sass:
   indentWidth: 4
   style: nested
